Updated links and references so 2014 works in 2016

--- a/index.html
+++ b/index.html
@@ -214,8 +214,6 @@
         -webkit-animation: type-d .8s steps(2) infinite;
     }
 
-
-
 @keyframes type-a {
     0% {
         background-position: 0 0;
@@ -295,7 +293,7 @@
   <body>
     <header>
         <div class="info">
-            <a href="http://au.jsconf.com"><img src="http://jsconf.eu/2011/js.png" alt="JSConf logo"></a> 
+            <a href="http://2014.jsconfau.com"><img src="/graphics/js-sized.png" alt="JSConf logo"></a>
             <h1>JSConf AU 2014</h1>
             <div class="callout">April 10th. Melbourne, Australia</div>
         </div>
@@ -327,8 +325,6 @@ Info
 
          <p>The following map has information on how to get to the venue and the opening and closing event locations. </p>
          <iframe width="538" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com.au/maps/ms?msid=208642082509362571264.0004f65ba741613a30254&amp;msa=0&amp;ie=UTF8&amp;t=h&amp;iwloc=0004f65ba9586428a593a&amp;ll=-37.803782,144.964685&amp;spn=0.034484,0.066047&amp;output=embed"></iframe><br /><small>View <a href="https://www.google.com.au/maps/ms?msid=208642082509362571264.0004f65ba741613a30254&amp;msa=0&amp;ie=UTF8&amp;t=h&amp;iwloc=0004f65ba9586428a593a&amp;ll=-37.803782,144.964685&amp;spn=0.034484,0.066047&amp;source=embed" style="color:#0000FF;text-align:left">
-
-
 
         <p>
         Our opening party will be held at <a href="http://www.mrwowsemporium.com/"> Mr Wows Emporium </a> starting at 8pm on the 9th of April. This event will be a shared with the closing party for CSSConf.au, so it will be a great event to meet new friends. Food and drinks will be provided.
@@ -362,7 +358,7 @@ Tickets
       </header>
       <article>
         <p>If you want to be a part of this fantastic event, we have sponsorship opportunities for you, no matter how big or small. We would love to have you be a part of what we know will be something to remember.</p>
-        <p><a href="mailto:jared.wyles@gmail.com?subject=JSConf Sponsorship"> Please contact us </a> to see how we can make this event work for you</p>
+        <p><a href="mailto:sponsors@jsconfau.com?subject=JSConf%20Sponsorship"> Please contact us </a> to see how we can make this event work for you</p>
         <div class="row">
         <div class="invader type-a"></div>
         <div class="invader type-a"></div>
